--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,8 @@ on:
       - main
 
 jobs:
-  build: runs-on: ubuntu-latest
+  build: 
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout
