--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
           aws configure set region ${{ secrets.AWS_REGION }}
       
       - name: Upload to S3
-        run: aws s3 cp latcicd.zip s3://${{ secrets.S3_BUCKET_NAME }}/latcicd.zip
+        run: aws s3 cp "latcicd.zip" "s3://${{ secrets.S3_BUCKET_NAME }}/latcicd.zip"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
